--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<div class="container">
+  <form #loginForm="ngForm">
+    <h1 class="login-title">Log In</h1>
+    <div class="form-group">
+      <label>Email</label>
+      <input type="text" class="form-control" #emailControl="ngModel"
+          placeholder="Email" [(ngModel)]="email" name="email"
+          maxlength="70" email required
+      >
+    </div>
+    <div class="form-group">
+      <label>Password</label>
+      <input type="password" class="form-control" #passwordControl="ngModel"
+             placeholder="Password" [(ngModel)]="password" name="password"
+             maxlength="70" password required
+      >
+    </div>
+    <button [disabled]="!loginForm.form.valid" type="submit"
+      class="btn btn-primary" (click)="signIn()"
+    >Sign In</button>
+      <p *ngIf="errorMsg" class="text-danger">{{errorMsg}}</p>
+  </form>
+</div>
